Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100494

QMdiSubWindow does not respect size constraints

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.4.0 Beta1
    • 5.15.2, 6.2.0
    • Widgets: Layout
    • None
    • All
    • 15f7ef26b8 (qt/qtbase/dev) 15f7ef26b8 (qt/tqtc-qtbase/dev)

      Setting a minimum size to a widget inside QMdiSubwidget is not respected by the layout manager. This leads to a missing scrollbar when the mdi window is shown in fullscreen
      Original bug report is from the forum: https://forum.qt.io/topic/134094/bug-of-qmdiarea-showing-scrollbar

      When a subwidget has a minimum size, then the top level widget has a proper minimum size set. This is not the case for a QMdiSubWidget because it's not a topLevel widget as you can see in the testcase. Therefore it's possible to set a smaller size than the (expected) minimum size with e.g. resize() or setGeometry().

        For Gerrit Dashboard: QTBUG-100494
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            chehrlic Christian Ehrlicher
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes